# simple_key_logger

./: Cargo.toml  README.md  logs.txt
src/: main.rs
